# GraphMap-Backend

./: .gitignore  .~dataset.xlsx  README.md  config.py  dataset.xlsx  main.py  pyproject.toml  requirements.txt  vercel.json
Documentation/: TP.md  cover.md
Documentation/astar/: astar.md  uwu.md
api/: index.py
controllers/: city_controller.py
entities/: city.py
graphmap/domain/model/entities/: city.py  geo_utils.py  graph.py
graphmap/domain/services/: chatbot_service.py  city_service.py  graph_builder.py  graph_service.py  pathfinding_service.py
graphmap/interfaces/rest/: chatbot_controller.py  city_controller.py  graph_controller.py
services/: city_service.py
